--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -236,6 +236,10 @@ ul.nav {
   }
 }
 
+.table-wrapper {
+  overflow-x: auto;
+}
+
 table {
   min-width: 750px;
   width: 100%;
@@ -579,7 +583,7 @@ table {
   }
 
   table {
-    min-width: 550px;
+    min-width: 650px;
     width: 100%;
     border-collapse: collapse;
     table-layout: fixed;
