--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,10 @@ ul.nav li a:hover img, ul.nav li a.active img {
   background-color: #F9FBFF;
 }
 
+.table-wrapper {
+  overflow-x: auto;
+}
+
 table {
   min-width: 750px;
   width: 100%;
@@ -514,7 +518,7 @@ table td.status.inactive {
     width: 97%;
   }
   table {
-    min-width: 550px;
+    min-width: 650px;
     width: 100%;
     border-collapse: collapse;
     table-layout: fixed;
